# hse-mcv-dist-project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  pyproject.toml  streamlit_ui.py
.github/workflows/: python-package.yml
test_project/: __main__.py  demo.py
tests/: test_all.py
tests/expected_outputs/: out2.npy  out3.npy
tests/expected_outputs_86/: out1.npy  out2.npy  out3.npy
tests/expected_outputs_arm/: out1.npy
