[tool.poetry]
name = "test-project"
version = "1.0.0"
description = "Test Project HSE MCV"
authors = ["Dmitry Ignatev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.15.0"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
opencv-contrib-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
