[tool.poetry]
name = "test-project"
version = "1.0.0"
description = "Test Project HSE MCV"
authors = ["Dmitry Ignatev"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow = "2.11.0"
tensorflow-io-gcs-filesystem = "0.30.0"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
opencv-contrib-python = "^4.9.0.80"
pylint = {version="*", extras=["dev"], optional=true}
black = {version="*", extras=["dev"], optional=true}
pytest = {version="*", extras=["dev"], optional=true}
pre-commit = {version="*", extras=["dev"], optional=true}

[tool.poetry.extras]
dev = ["pylint", "black", "pytest", "pre-commit"]

[tool.poetry.scripts]
test_demo = 'test_project.demo:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
